--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -9,4 +9,10 @@
 .nextButton {
     position: absolute;
     top: 150px;
+    right: 175px;
+}
+.backButton {
+    position: absolute;
+    top: 150px;
+    right: 250px;
 }
